clusters/_base/apps/servarr/prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  selector:
    matchLabels:
      app: prowlarr
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: prowlarr
      labels:
        app: prowlarr
    spec:
      volumes:
        - name: config
          emptyDir: {}
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: prowlarr
          image: ghcr.io/onedr0p/prowlarr:1.31.2@sha256:945c4b9f642a14b65c8ec07f553334b763b26156998a81ddad6aafdbcb752a3b
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9696
              name: http
          livenessProbe:
            httpGet:
              path: /ping
              port: http
          readinessProbe:
            httpGet:
              path: /ping
              port: http
          volumeMounts:
            - name: config
              mountPath: /config
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
    - name: prowlarr
      protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-http
spec:
  parentRefs:
    - name: default
  hostnames:
    - prowlarr.${APPS_DOMAIN}
  rules:
    - backendRefs:
        - name: prowlarr
          port: 80
